--- a/Template_Angular7/ClientApp/src/index.html
+++ b/Template_Angular7/ClientApp/src/index.html
@@ -1,14 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
 <head>
   <meta charset="utf-8">
   <title>Gruppenplaner</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Applikation wird geladen...</app-root>
+  <app-root>Planer wird geladen...</app-root>
 </body>
 </html>
